--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,25 +1,24 @@
 /* styles/4-filters.css */
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 30px;
+    background-color: white; /* Set background color to white */
+    height: 70px; /* Set height to 70px */
+    width: 100%; /* Full width */
+    border: 1px solid #DDDDDD; /* Add a grey border */
+    border-radius: 4px; /* Rounded borders */
+    text-align: right; /* Align text to the right */
+
 }
 
-button { /* Adjust the right margin as needed */
-    font-size: 18px;
-    background-color: #fF5a5f;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    margin: auto, 30px, auto, auto;
+.search-button{
+    font-size: 18px; /* Set font size to 18px */
+    background-color: #FF5A5F; /* Set background color to red */
+    color: #FFFFFF; /* Set text color to white */
+    height: 48px; /* Set height to 48px */
+    width: 20%; /* Set width to 20% */
+    border-radius: 4px; /* Rounded borders */
+    border-style: none; /* Remove border */
+    margin-top: 10px; /* Set top margin to 10px */
+    margin-right: 30px; /* Set right margin to 30px */
 }
 
 .filters button:hover {
